update login and admission layout

--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -6,10 +6,14 @@
     align-items: center;
 }
 
-form {
-    width: 50rem;
+.form-small {
+    width: 30rem;
 }
 
-.row {
-    background-color: red !important;
+.form-large {
+    width: 60rem;
 }
+
+/* .row {
+    background-color: red !important;
+} */
