--- a/main_app/templates/admission.html
+++ b/main_app/templates/admission.html
@@ -32,7 +32,7 @@
 
             <section class="custom_form_center">
             
-                <form action="" method="post" class="">
+                <form action="" method="post" class="form-large">
                     {{ form.hidden_tag() }}
 
                     <!-- full name -->
