--- a/main_app/templates/apply_teacher.html
+++ b/main_app/templates/apply_teacher.html
@@ -25,13 +25,13 @@
         <div class="form_container">
             
             <header>
-                <h1 class="school_name">IQRA JUNIOR SCHOOL</h1>
+                <h1 class="school_name"> JUNIOR SCHOOL AND COLLEGE </h1>
                 <h2 class="title"> Application for Teachers </h2>
             </header>
 
             <section>
             
-                <form action="" method="post" class="grid_teacher_apply">
+                <form action="" method="post" class="form-large">
                     {{ form.hidden_tag() }}
 
                     <div class="form_input" id="name">
