--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -20,9 +20,37 @@
     <div class="custom_form_center">
         <div class="container text-center">
 
-            <h1> I will be right back! </h1>
+            <h1> All these routes are available </h1>
+            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                <label class="btn btn-outline-primary" for="btnradio1"> 
+                    <a href=" {{ url_for('index') }} "> Home </a> 
+                </label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio2"> 
+                    <a href=" {{ url_for('login') }} "> Login  </a>   
+                </label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio3"> Parents Login </label>
+
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio4"> Admission </label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio5"> Parents Application Form </label>
+
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio6"> Teacher Application Form </label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
+                <label class="btn btn-outline-primary" for="btnradio7"> About </label>
+            </div>
+
+            <!-- <h1> I will be right back! </h1>
             <br />
-            <h2> Just 10 minutes </h2>
+            <h2> Just 10 minutes </h2> -->
         
         <div>
             </div>
