--- a/main_app/templates/login_parents.html
+++ b/main_app/templates/login_parents.html
@@ -26,7 +26,7 @@
         
             <h1 class="text-center mb-5"> Login as Parents </h2>
 
-            <form action="" method="post" class="">
+            <form action="" method="post" class="form-small">
                 {{ form.hidden_tag() }}
 
                 <!-- email field -->
