--- a/main_app/templates/login.html
+++ b/main_app/templates/login.html
@@ -23,7 +23,7 @@
         
             <h1 class="text-center mb-5"> Login </h2>
 
-            <form action="" method="post" class="">
+            <form action="" method="post" class="form-small">
                 {{ form.hidden_tag() }}
 
                 <!-- email field -->
