--- a/main_app/templates/admission.html
+++ b/main_app/templates/admission.html
@@ -7,25 +7,23 @@
 {% endblock %}
 
 {% block body %}
-    
+
     <main class="bg_gray pt-5 pb-5">
 
-        <div class="pb-5">
-            <h1 class="h1 text-center"> Admission Form - 2020 </h1>
-        </div> 
+        <h1 class="h1 text-center mb-5"> Admission Form - 2020 </h1>
 
-        <section class="custom_form_center">
-        
+        <section class="d-flex justify-content-center">
+
             <form action="" method="post" class="form-large">
                 {{ form.hidden_tag() }}
 
-            
+
                 <div class="row">
 
                     <!-- father name -->
                     <div class="col-sm-6">
                         {{ form.firstname.label(class="form-label") }}
-                        
+
                         {% if form.firstname.errors %}
                             {{ form.firstname( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -35,17 +33,17 @@
                             </div>
 
                         {% else %}
-                            {{ form.firstname( 
+                            {{ form.firstname(
                                 class="form-control",
                                 placeholder="First name"
                             ) }}
                         {% endif %}
                     </div>
-                    
+
                     <!-- last name -->
                     <div class="col-sm-6">
                         {{ form.lastname.label(class="form-label") }}
-                        
+
                         {% if form.lastname.errors %}
                             {{ form.lastname( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -55,7 +53,7 @@
                             </div>
 
                         {% else %}
-                            {{ form.lastname( 
+                            {{ form.lastname(
                                 class="form-control",
                                 placeholder="Lastname"
                             ) }}
@@ -69,7 +67,7 @@
                     <!-- father name -->
                     <div class="col-sm-6">
                         {{ form.father_name.label(class="form-label") }}
-            
+
                         {% if form.father_name.errors %}
                             {{ form.father_name( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -79,7 +77,7 @@
                             </div>
 
                         {% else %}
-                            {{ form.father_name( 
+                            {{ form.father_name(
                                 class="form-control",
                                 placeholder="Father's name"
                             ) }}
@@ -89,7 +87,7 @@
                     <!-- mother name -->
                     <div class="col-sm-6">
                         {{ form.mother_name.label(class="form-label") }}
-                    
+
                         {% if form.mother_name.errors %}
                             {{ form.mother_name( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -99,7 +97,7 @@
                             </div>
 
                         {% else %}
-                            {{ form.mother_name( 
+                            {{ form.mother_name(
                                 class="form-control",
                                 placeholder="Mother's name"
                             ) }}
@@ -108,19 +106,19 @@
 
                 </div>
 
-                
+
                 <div class="row mt-2">
 
                     <!-- select class -->
                     <div class="col-sm-6">
-                        {{ form.applicable_class.label(class="form-label") }}                    
+                        {{ form.applicable_class.label(class="form-label") }}
                         {{ form.applicable_class(class="form-select") }}
                     </div>
-                    
+
                     <!-- phone number -->
                     <div class="col-sm-6">
                         {{ form.phone_number.label(class="form-label") }}
-                    
+
                         {% if form.phone_number.errors %}
                             {{ form.phone_number( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -133,21 +131,21 @@
                             {{ form.phone_number(
                                 class="form-control",
                                 placeholder="Phone Number"
-                            ) }} 
-                        {% endif %}  
+                            ) }}
+                        {% endif %}
                     </div>
 
-                    
+
 
                 </div>
 
-        
+
                 <div class="row mt-2">
 
                     <!-- birth cirtificate no -->
                     <div class="col-sm-6">
                         {{ form.birth_cirtificate_no.label(class="form-label") }}
-                
+
                         {% if form.birth_cirtificate_no.errors %}
                             {{ form.birth_cirtificate_no( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -157,17 +155,17 @@
                             </div>
 
                         {% else %}
-                            {{ form.birth_cirtificate_no( 
-                                class="form-control", 
+                            {{ form.birth_cirtificate_no(
+                                class="form-control",
                                 placeholder="Birth Cirtificate No"
                             ) }}
                         {% endif %}
                     </div>
-                    
+
                     <!-- brith of date -->
                     <div class="col-sm-6">
                         {{ form.birth_date.label(class="form-label") }}
-                    
+
                         {% if form.birth_date.errors %}
                             {{ form.birth_date( class="form-control is-invalid" ) }}
                             <div class="invalid-feedback">
@@ -186,9 +184,9 @@
 
                 </div>
 
-                
+
                 <div class="row mt-2">
-                    
+
                     <!-- address -->
                     <div class="col-sm-6">
                         {{ form.address.label(class="form-label") }}
@@ -201,10 +199,10 @@
 
                     <!-- gender -->
                     <div class="col-sm-6">
-            
+
                         <p class="form-label"> Gender </p>
-                        
-                        <div class="d-flex align-items-center nobg">                        
+
+                        <div class="d-flex align-items-center nobg">
                             <div class="form-check form-control">
                                 {{ form.male(class="form-check-input") }}
                                 {{ form.male.label(class="form-label") }}
@@ -212,17 +210,17 @@
 
                             <div class="form-check form-control">
                                 {{ form.female(class="form-check-input") }}
-                                {{ form.female.label(class="form-label") }}    
+                                {{ form.female.label(class="form-label") }}
                             </div>
                         </div>
-                        
+
                     </div>
 
                 </div>
-                
-                
+
+
                 <div class="row mt-2">
-                    
+
                     <!-- email -->
                     <div class="col-sm-6">
                         {{ form.email.label(class="form-label") }}
@@ -235,10 +233,10 @@
 
                     <!-- transportation service -->
                     <div class="col-sm-6">
-            
+
                         <p class="form-label"> Request for transportation service </p>
-                        
-                        <div class="d-flex align-items-center nobg">                        
+
+                        <div class="d-flex align-items-center nobg">
                             <div class="form-check form-control">
                                 {{ form.yes(class="form-check-input") }}
                                 {{ form.yes.label(class="form-label") }}
@@ -246,16 +244,17 @@
 
                             <div class="form-check form-control">
                                 {{ form.no(class="form-check-input") }}
-                                {{ form.no.label(class="form-label") }}    
+                                {{ form.no.label(class="form-label") }}
                             </div>
                         </div>
-                        
+
                     </div>
 
                 </div>
 
 
-                <div class="row">
+                <div class="row mt-2">
+
                     <!-- photo -->
                     <div class="col-sm-6">
                         {{ form.photo.label(class="form-label") }}
@@ -269,13 +268,9 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row mt-5">
 
-                    <div class="form-label">
-                        
-                    </div>
-
-                    <p class="disable">
+                    <p class="text-break ">
                         I agree all the terms and condition and cirtify that all the information I gave above is true. If the authority find any
                         flase information I will accept any dicision that the authority takes.
                     </p>
@@ -288,8 +283,8 @@
             </form>
 
         </section>
-        
+
         </div>
-        
+
     </main>
 {% endblock %}
