--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block help_developer %}
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ >
-# This Section help you to find specific section. 
+# This Section help you to find specific section.
 
 	0: head
 		0.0: styles
@@ -17,51 +17,51 @@
 
 
 {% block body %}
-    <div class="custom_form_center">
+    <div class="custom_form_center_100vh">
         <div class="container text-center">
 
             <h1> All these routes are available </h1>
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="btnradio1"> 
-                    <a href=" {{ url_for('index') }} " class="nav-link active-nav-link"> Home </a> 
+                <label class="btn btn-outline-primary" for="btnradio1">
+                    <a href=" {{ url_for('index') }} " class="nav-link active-nav-link"> Home </a>
                 </label>
-              
+
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio2"> 
-                    <a href=" {{ url_for('login') }} " class="nav-link"> Login  </a>   
+                <label class="btn btn-outline-primary" for="btnradio2">
+                    <a href=" {{ url_for('login') }} " class="nav-link"> Login  </a>
                 </label>
-              
+
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio3"> 
+                <label class="btn btn-outline-primary" for="btnradio3">
                     <a href=" {{ url_for('loginParents') }} " class="nav-link">
-                        Parents Login 
+                        Parents Login
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio4"> 
+                <label class="btn btn-outline-primary" for="btnradio4">
                     <a href=" {{ url_for('admission') }} " class="nav-link">
                         Admission
-                    </a> 
+                    </a>
                 </label>
-              
+
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio5"> 
+                <label class="btn btn-outline-primary" for="btnradio5">
                     <a href=" {{ url_for('applyParents') }} " class="nav-link">
                         Parents Application Form
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio6"> 
+                <label class="btn btn-outline-primary" for="btnradio6">
                     <a href=" {{ url_for('applyTeacher') }} " class="nav-link">
                         Teacher Application Form
                     </a>
                 </label>
-              
+
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio7"> 
+                <label class="btn btn-outline-primary" for="btnradio7">
                     <a href=" {{ url_for('about') }} " class="nav-link">
                         About
                     </a>
@@ -71,7 +71,7 @@
             <!-- <h1> I will be right back! </h1>
             <br />
             <h2> Just 10 minutes </h2> -->
-        
+
         <div>
             </div>
 {% endblock %}
