finishing ui coding for login and apply realated page

--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -1,6 +1,11 @@
 .bg_gray {
     background: #f8f9fa !important;
 }
+
+.vh100 {
+    height: 100vh;
+}
+
 /* move the form in center both horizontal and vertical */
 .custom_form_center {
     height: 150vh;
