--- a/main_app/templates/login_parents.html
+++ b/main_app/templates/login_parents.html
@@ -3,7 +3,7 @@
 
 
 {% block additional_title %}
-    Admission -
+    Login Parents -
 {% endblock %}
 
 
@@ -20,7 +20,7 @@
         <button class="button"> Back </button>
     </div> -->
 
-    <main class="custom_form_center bg_gray">
+    <main class="custom_form_center_100vh bg_gray">
 
         <section>        
         
