--- a/main_app/templates/login.html
+++ b/main_app/templates/login.html
@@ -3,7 +3,7 @@
 
 
 {% block additional_title %}
-    Admission -
+    Login -
 {% endblock %}
 
 
@@ -17,7 +17,7 @@
 {% block body %}
     
 
-    <main class="custom_form_center bg_gray">
+    <main class="custom_form_center_100vh bg_gray">
 
         <section>        
         
