fixing routes problems

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -24,45 +24,45 @@
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                 <label class="btn btn-outline-primary" for="btnradio1">
-                    <a href=" {{ url_for('index') }} " class="nav-link active-nav-link"> Home </a>
+                    <a href=" {{ url_for('main.index') }} " class="nav-link active-nav-link"> Home </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio2">
-                    <a href=" {{ url_for('login_bp.login') }} " class="nav-link"> Login  </a>
+                    <a href=" {{ url_for('users.login') }} " class="nav-link"> Login  </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio3">
-                    <a href=" {{ url_for('login_parents_bp.loginParents') }} " class="nav-link">
+                    <a href=" {{ url_for('users.login_parents') }} " class="nav-link">
                         Parents Login
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio4">
-                    <a href=" {{ url_for('admission_bp.admission') }} " class="nav-link">
+                    <a href=" {{ url_for('users.admission') }} " class="nav-link">
                         Admission
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio5">
-                    <a href=" {{ url_for('apply_parents_bp.apply_parents') }} " class="nav-link">
+                    <a href=" {{ url_for('users.apply_parents') }} " class="nav-link">
                         Parents Application Form
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio6">
-                    <a href=" {{ url_for('apply_teacher_bp.apply_teacher') }} " class="nav-link">
+                    <a href=" {{ url_for('users.apply_teacher') }} " class="nav-link">
                         Teacher Application Form
                     </a>
                 </label>
 
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
                 <label class="btn btn-outline-primary" for="btnradio7">
-                    <a href=" {{ url_for('about') }} " class="nav-link">
+                    <a href=" {{ url_for('main.about') }} " class="nav-link">
                         About
                     </a>
                 </label>
