--- a/main_app/templates/demo_register.html
+++ b/main_app/templates/demo_register.html
@@ -21,10 +21,28 @@
 
         <section>
 
-            <h1 class="text-center mb-5"> Login </h2>
+            <h1 class="text-center mb-5"> Demo Register for Check Login Auth </h2>
 
             <form action="" method="post" class="form-small">
                 {{ form.hidden_tag() }}
+
+                <!-- username field -->
+                <div class="mb-3">
+
+                    {{ form.username.label(class="form-label") }}
+
+                    {% if form.username.errors %}
+                        {{ form.username( class="form-control is-invalid" ) }}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>  {{ error }}   </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control") }}
+                    {% endif %}
+
+                </div>
 
                 <!-- email field -->
                 <div class="mb-3">
@@ -38,12 +56,8 @@
                                 <span>  {{ error }}   </span>
                             {% endfor %}
                         </div>
-
                     {% else %}
-                        {{ form.email(
-                            class="form-control"
-                        ) }}
-
+                        {{ form.email(class="form-control") }}
                     {% endif %}
 
                 </div>
@@ -60,23 +74,33 @@
                                 <span>  {{ error }}   </span>
                             {% endfor %}
                         </div>
-
                     {% else %}
-                        {{ form.password(
-                            class="form-control"
-                        ) }}
-
+                        {{ form.password(class="form-control") }}
                     {% endif %}
 
                 </div>
 
-                <div class="form-check">
-                    {{ form.remember_me(class="form-check-input") }}
-                    {{ form.remember_me.label(class="form-check-label") }}
+
+                <!-- confirm password field -->
+                <div class="mb-3">
+
+                    {{ form.confirm_password.label(class="form-label") }}
+
+                    {% if form.confirm_password.errors %}
+                        {{ form.confirm_password( class="form-control is-invalid" ) }}
+                        <div class="invalid-feedback">
+                            {% for error in form.confirm_password.errors %}
+                                <span>  {{ error }}   </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.confirm_password(class="form-control") }}
+                    {% endif %}
+
                 </div>
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    {{ form.login_button( class="btn btn-lg btn-primary" ) }}
+                    {{ form.reg_button( class="btn btn-lg btn-primary" ) }}
                 </div>
 
             </form>
